implement all the easy letters

--- a/src/index.jade
+++ b/src/index.jade
@@ -5,13 +5,51 @@ html
     link(rel="stylesheet", href="index.css")
     
   body
-    .letter.g
-    .letter.i
-    .letter.l
-    .letter.a
-    .letter.d
-    br
-    .letter.g
-    .letter.r
-    .letter.a
-    .letter.y
+    #name
+      .letter.g
+      .letter.i
+      .letter.l
+      .letter.a
+      .letter.d 
+      br
+      .letter.g
+      .letter.r
+      .letter.a
+      .letter.y
+    .alphabet 
+      .letter.a
+      .letter.b
+      .letter.c
+      .letter.d
+      .letter.e
+      .letter.f
+      .letter.g
+      .letter.h
+      .letter.i
+      .letter.j
+      .letter.k
+      .letter.l
+      .letter.m
+      .letter.n
+      .letter.o
+      .letter.p
+      .letter.q
+      .letter.r
+      .letter.s
+      .letter.t
+      .letter.u
+      .letter.v
+      .letter.w
+      .letter.x
+      .letter.y
+      .letter.z
+      .letter.0
+      .letter.1
+      .letter.2
+      .letter.3
+      .letter.4
+      .letter.5
+      .letter.6
+      .letter.7
+      .letter.8
+      .letter.9   
