a little more website-y with links to GH and LI

--- a/src/index.jade
+++ b/src/index.jade
@@ -5,7 +5,7 @@ html
     link(rel="stylesheet", href="index.css")
     
   body
-    #name
+    .name
       .letter.g
       .letter.i
       .letter.l
@@ -16,40 +16,29 @@ html
       .letter.r
       .letter.a
       .letter.y
-    .alphabet 
-      .letter.a
-      .letter.b
-      .letter.c
+    .intro
+      .letter.u
+      .letter.x
+      .letter
       .letter.d
       .letter.e
-      .letter.f
-      .letter.g
-      .letter.h
-      .letter.i
-      .letter.j
-      .letter.k
-      .letter.l
-      .letter.m
-      .letter.n
-      .letter.o
-      .letter.p
-      .letter.q
-      .letter.r
-      .letter.s
-      .letter.t
-      .letter.u
       .letter.v
-      .letter.w
-      .letter.x
-      .letter.y
-      .letter.z
-      .letter.0
-      .letter.1
-      .letter.2
-      .letter.3
-      .letter.4
-      .letter.5
-      .letter.6
-      .letter.7
-      .letter.8
-      .letter.9   
+    ul.links
+      li
+        a(href="https://github.com/giladgray", target="_blank")
+          .letter.g
+          .letter.i
+          .letter.t
+          .letter.h
+          .letter.u
+          .letter.b
+      li
+        a(href="https://linkedin.com/in/giladgray", target="_blank")
+          .letter.l
+          .letter.i
+          .letter.n
+          .letter.k
+          .letter.e
+          .letter.d
+          .letter.i
+          .letter.n
