--- a/src/index.scss
+++ b/src/index.scss
@@ -1,17 +1,36 @@
 @import "letter";
 
 body {
-  font-size: 100px;
+  font-size: 40px;
+  max-width: 800px;
+  margin: 1em auto;
 
   * { box-sizing: border-box; }
 }
 
-#name { font-size: 100px; }
-.alphabet { font-size: 40px; }
+.name {
+  font-size: 100px;
+}
+
+a { display: inline-block; }
+
+.name .letter:hover,
+.intro .letter:hover,
+a:hover .letter { @extend %letter-hover; }
+
+.links {
+  text-align: right;
+  list-style-type: none;
+}
 
 %letter-hover {
   border-color: $letter-hover-color;
   transform: rotateY(180deg);
+
+  &:before,
+  &:after {
+    border-color: $letter-hover-color;
+  }
 }
 
 %pseudo-letter {
@@ -21,8 +40,6 @@ body {
 
   border-color: $letter-color;
   border-width: $letter-thickness;
-
-  &:hover { border-color: $letter-hover-color; }
 }
 
 @mixin top-bottom() {
@@ -48,13 +65,6 @@ body {
   border-width: $letter-thickness;
 
   transition: transform 500ms ease;
-
-  &:hover { @extend %letter-hover; }
-
-  // &:hover,
-  // &:hover:before,
-  // &:hover:after { border-color: $letter-hover-color; }
-
 
   &.a {
     @include top-letter(solid, $letter-width $letter-width 0 0);
@@ -160,6 +170,9 @@ body {
   }
 
   &.v {
+    @include top-letter(none solid, 0);
+    @include bottom-letter(none solid solid, 0 0 $letter-width 0);
+    @include middle-cross-bar();
     // TODO: angled sides
   }
 
